--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Portfolio website</title>
+	<title>Nasib Deula</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css"/>
 
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/brands.min.css" integrity="sha512-OivR4OdSsE1onDm/i3J3Hpsm5GmOVvr9r49K3jJ0dnsxVzZgaOJ5MfxEAxCyGrzWozL9uJGKz6un3A7L+redIQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -14,7 +14,7 @@
 		<nav>
 			<h2 class="logo">Portfo<span>lio</span></h2>
 			<ul>
-				<li><a href="#">Home</a></li>
+				<li><a href="nasib.com.np">Home</a></li>
 				<li><a href="#">About Me</a></li>
 				<li><a href="#">Services</a></li>
 				<li><a href="#">Skills</a></li>
@@ -25,7 +25,7 @@
 		<div class="content">
 			<h4>Hello, my name is</h4>
 			<h1>Nasib <span>Deula</span></h1>
-			<h3>I'am an QA Officer.</h3>
+			<h3>I'm an QA Officer.</h3>
 			<div class="newslatter">
 			</div>
 		</div>
