--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<nav>
 			<h2 class="logo">Portfo<span>lio</span></h2>
 			<ul>
-				<li><a href="nasib.com.np">Home</a></li>
+				<li><a href="#index">Home</a></li>
 				<li><a href="#">About Me</a></li>
 				<li><a href="#">Services</a></li>
 				<li><a href="#">Skills</a></li>
@@ -25,7 +25,7 @@
 		<div class="content">
 			<h4>Hello, my name is</h4>
 			<h1>Nasib <span>Deula</span></h1>
-			<h3>I'm an QA Officer.</h3>
+			//<h3>I'm an QA Officer.</h3>//
 			<div class="newslatter">
 			</div>
 		</div>
@@ -38,12 +38,7 @@
 			<div class="about-text">
 				<h2>About Me</h2>
 				<h5>Developer <span>& Designer</span></h5>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-				proident, sunt in culpa qui officia deserunt mollit anim id est laborum..</p>
+				<p> I am Nasib Deula, a dedicated QA Engineer with a passion for ensuring software excellence. With a keen attention to detail and a commitment to delivering high-quality products, I thrive in the world of testing and quality assurance. My journey is characterized by continuous learning, problem-solving, and contributing to the seamless user experience. Join me as I navigate the dynamic landscape of software quality and contribute to building reliable and exceptional digital solutions.</p>
 				<button type="button">Let's Talk</button>
 			</div>
 		</div>
@@ -103,15 +98,15 @@
 	<!------footer start--------->
 	<footer>
 		<p>Nasib Deula</p>
-		<p>Lets connect on social media platforms>
+		<p>Lets connect on social media platforms
 		<div class="social">
-			<a href="https://www.facebook.com">
+			<a href="https://www.facebook.com/nashib.deula">
 				<i class="fab fa-facebook"></i>
 			</a>
 			<a href="https://www.instagram.com"><i class="fab fa-instagram"></i></a>
-			<a href="https://np.linkedin.com"><i class="fab fa-linkedin"></i></a>
+			<a href="https://www.linkedin.com/in/nasib-deula-44b751205/"><i class="fab fa-linkedin"></i></a>
 		</div>
-		<p class="end">CopyRight By Nasib Deula</p>
+		<p &copy; 2023 Nasib Deula. All rights reserved.</p>
 	</footer>
 </body>
 </html>
