--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 		<div class="content">
 			<h4>Hello, my name is</h4>
 			<h1>Nasib <span>Deula</span></h1>
-			//<h3>I'm an QA Officer.</h3>//
+			<h3>I'm an QA Officer.</h3>
 			<div class="newslatter">
 			</div>
 		</div>
@@ -37,7 +37,7 @@
 			<img src="img/2.jpg">
 			<div class="about-text">
 				<h2>About Me</h2>
-				<h5>Developer <span>& Designer</span></h5>
+				<h5>QA <span>Engineer</span></h5>
 				<p> I am Nasib Deula, a dedicated QA Engineer with a passion for ensuring software excellence. With a keen attention to detail and a commitment to delivering high-quality products, I thrive in the world of testing and quality assurance. My journey is characterized by continuous learning, problem-solving, and contributing to the seamless user experience. Join me as I navigate the dynamic landscape of software quality and contribute to building reliable and exceptional digital solutions.</p>
 				<button type="button">Let's Talk</button>
 			</div>
