--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 			<a href="https://www.instagram.com"><i class="fab fa-instagram"></i></a>
 			<a href="https://www.linkedin.com/in/nasib-deula-44b751205/"><i class="fab fa-linkedin"></i></a>
 		</div>
-		<p &copy; 2023 Nasib Deula. All rights reserved.</p>
+		<p &copy; 2023 Nasib Deula. All Rights Reserved.</p>
 	</footer>
 </body>
 </html>
