--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 		<div class="content">
 			<h4>Hello, my name is</h4>
 			<h1>Nasib <span>Deula</span></h1>
-			<h3>I'm an QA Officer.</h3>
+			<h3>I'm a QA Officer.</h3>
 			<div class="newslatter">
 			</div>
 		</div>
