Update and rename contact to contact.html

--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,18 @@
 </head>
 <body>
     <!----Header (you can copy this from your existing HTML)---->
+<div class="hero">
+		<nav>
+			<h2 class="logo">Portfo<span>lio</span></h2>
+			<ul>
+				<li><a href="#index">Home</a></li>
+				<li><a href="#">About Me</a></li>
+				<li><a href="#">Services</a></li>
+				<li><a href="#">Skills</a></li>
+				<li><a href="#">Contact Me</a></li>
+			</ul>
+		</nav>
+</div>
     
     <!----Contact Section---->
     <div class="contact-section">
@@ -27,5 +39,17 @@
     </div>
     
     <!----Footer (you can copy this from your existing HTML)---->
+    <footer>
+		<p>Nasib Deula</p>
+		<p>Lets connect on social media platforms
+		<div class="social">
+			<a href="https://www.facebook.com/nashib.deula">
+				<i class="fab fa-facebook"></i>
+			</a>
+			<a href="https://www.instagram.com"><i class="fab fa-instagram"></i></a>
+			<a href="https://www.linkedin.com/in/nasib-deula-44b751205/"><i class="fab fa-linkedin"></i></a>
+		</div>
+		<p>&copy;  2023 Nasib Deula. All Rights Reserved</p>
+	</footer>
 </body>
 </html>
