--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 		<nav>
 			<h2 class="logo">Portfo<span>lio</span></h2>
 			<ul>
-				<li><a href="#index">Home</a></li>
+				<li><a href="index.html">Home</a></li>
 				<li><a href="#">About Me</a></li>
 				<li><a href="#">Services</a></li>
 				<li><a href="#">Skills</a></li>
-				<li><a href="#">Contact Me</a></li>
+				<li><a href="contact.html">Contact Me</a></li>
 			</ul>
 		</nav>
 
