--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
 		<nav>
 			<h2 class="logo">Portfo<span>lio</span></h2>
 			<ul>
-				<li><a href="#index">Home</a></li>
+				<li><a href="index.html">Home</a></li>
 				<li><a href="#">About Me</a></li>
 				<li><a href="#">Services</a></li>
 				<li><a href="#">Skills</a></li>
