--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			<h2 class="logo">Portfo<span>lio</span></h2>
 			<ul>
 				<li><a href="index.html">Home</a></li>
-				<li><a href="#">About Me</a></li>
+				<li><a href="#about">About Me</a></li>
 				<li><a href="#">Services</a></li>
 				<li><a href="#">Skills</a></li>
 				<li><a href="contact.html">Contact Me</a></li>
@@ -32,7 +32,7 @@
 	</div>
 
 	<!----About section start---->
-	<section class="about">
+	<section id="about" class="about">
 		<div class="main">
 			<img src="img/2.jpg">
 			<div class="about-text">
@@ -108,5 +108,40 @@
 		</div>
 		<p>&copy;  2023 Nasib Deula. All Rights Reserved</p>
 	</footer>
+	<script>
+// Smooth scrolling function
+function smoothScroll(target, duration) {
+    var targetElement = document.querySelector(target);
+    var targetPosition = targetElement.getBoundingClientRect().top;
+    var startPosition = window.pageYOffset;
+    var distance = targetPosition - startPosition;
+    var startTime = null;
+
+    function animation(currentTime) {
+        if (startTime === null) startTime = currentTime;
+        var timeElapsed = currentTime - startTime;
+        var ease = Math.easeInOutQuad(timeElapsed, startPosition, distance, duration);
+        window.scrollTo(0, ease);
+        if (timeElapsed < duration) requestAnimationFrame(animation);
+    }
+
+    function easeInOutQuad(t, b, c, d) {
+        t /= d / 2;
+        if (t < 1) return c / 2 * t * t + b;
+        t--;
+        return -c / 2 * (t * (t - 2) - 1) + b;
+    }
+
+    requestAnimationFrame(animation);
+}
+
+// Add smooth scrolling to navigation links
+var aboutLink = document.querySelector('a[href="#about"]');
+aboutLink.addEventListener('click', function (e) {
+    e.preventDefault();
+    smoothScroll('#about', 1000);
+});
+</script>
+
 </body>
 </html>
