--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			<h2 class="logo">Portfo<span>lio</span></h2>
 			<ul>
 				<li><a href="index.html">Home</a></li>
-				<li><a href="#about">About Me</a></li>
+				<li><a href="about">About Me</a></li>
 				<li><a href="#">Services</a></li>
 				<li><a href="#">Skills</a></li>
 				<li><a href="contact.html">Contact Me</a></li>
