--- a/contact.html
+++ b/contact.html
@@ -12,12 +12,19 @@
 			<h2 class="logo">Portfo<span>lio</span></h2>
 			<ul>
 				<li><a href="index.html">Home</a></li>
-				<li><a href="#">About Me</a></li>
+				<li><a href="#about">About Me</a></li>
 				<li><a href="#">Services</a></li>
 				<li><a href="#">Skills</a></li>
-				<li><a href="#">Contact Me</a></li>
+				<li><a href="contact.html">Contact Me</a></li>
 			</ul>
 		</nav>
+		<div class="content">
+			<h4>Hello, my name is</h4>
+			<h1>Nasib <span>Deula</span></h1>
+			<h3>I'm a QA Officer.</h3>
+			<div class="newslatter">
+			</div>
+		</div>
 </div>
     
     <!----Contact Section---->
