--- a/contact.html
+++ b/contact.html
@@ -29,8 +29,8 @@
     
     <!----Contact Section---->
     <div class="contact-section">
-        <h2>Contact Us</h2>
-        <p>If you have any questions or inquiries, feel free to reach out to us using the form below:</p>
+        <h2>Contact Me</h2>
+        <p>If you have any questions or inquiries, feel free to reach out to me using the form below:</p>
         <form action="submit_form.php" method="post">
             <label for="name">Your Name</label>
             <input type="text" id="name" name="name" required>
