--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/brands.min.css" integrity="sha512-OivR4OdSsE1onDm/i3J3Hpsm5GmOVvr9r49K3jJ0dnsxVzZgaOJ5MfxEAxCyGrzWozL9uJGKz6un3A7L+redIQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
-    <!----Header (you can copy this from your existing HTML)---->
+    <!----Header ---->
 <div class="hero">
 		<nav>
 			<h2 class="logo">Portfo<span>lio</span></h2>
@@ -58,5 +58,39 @@
 		</div>
 		<p>&copy;  2023 Nasib Deula. All Rights Reserved</p>
 	</footer>
+<script>
+// Smooth scrolling function
+function smoothScroll(target, duration) {
+    var targetElement = document.querySelector(target);
+    var targetPosition = targetElement.getBoundingClientRect().top;
+    var startPosition = window.pageYOffset;
+    var distance = targetPosition - startPosition;
+    var startTime = null;
+
+    function animation(currentTime) {
+        if (startTime === null) startTime = currentTime;
+        var timeElapsed = currentTime - startTime;
+        var ease = Math.easeInOutQuad(timeElapsed, startPosition, distance, duration);
+        window.scrollTo(0, ease);
+        if (timeElapsed < duration) requestAnimationFrame(animation);
+    }
+
+    function easeInOutQuad(t, b, c, d) {
+        t /= d / 2;
+        if (t < 1) return c / 2 * t * t + b;
+        t--;
+        return -c / 2 * (t * (t - 2) - 1) + b;
+    }
+
+    requestAnimationFrame(animation);
+}
+
+// Add smooth scrolling to navigation links
+var aboutLink = document.querySelector('a[href="#about"]');
+aboutLink.addEventListener('click', function (e) {
+    e.preventDefault();
+    smoothScroll('#about', 100); // Adjust duration as needed
+});
+</script>
 </body>
 </html>
