--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@
 		</div>
 		<p>&copy;  2023 Nasib Deula. All Rights Reserved</p>
 	</footer>
-	<script>
-// Smooth scrolling function
+<script>
+Smooth scrolling function
 function smoothScroll(target, duration) {
     var targetElement = document.querySelector(target);
     var targetPosition = targetElement.getBoundingClientRect().top;
@@ -134,8 +134,7 @@ function smoothScroll(target, duration) {
 
     requestAnimationFrame(animation);
 }
-
-// Add smooth scrolling to navigation links
+Add smooth scrolling to navigation links
 var aboutLink = document.querySelector('a[href="#about"]');
 aboutLink.addEventListener('click', function (e) {
     e.preventDefault();
