--- a/contact.html
+++ b/contact.html
@@ -59,7 +59,7 @@
 		<p>&copy;  2023 Nasib Deula. All Rights Reserved</p>
 	</footer>
 <script>
-// Smooth scrolling function
+Smooth scrolling function
 function smoothScroll(target, duration) {
     var targetElement = document.querySelector(target);
     var targetPosition = targetElement.getBoundingClientRect().top;
@@ -84,12 +84,11 @@ function smoothScroll(target, duration) {
 
     requestAnimationFrame(animation);
 }
-
-// Add smooth scrolling to navigation links
+Add smooth scrolling to navigation links
 var aboutLink = document.querySelector('a[href="#about"]');
 aboutLink.addEventListener('click', function (e) {
     e.preventDefault();
-    smoothScroll('#about', 100); // Adjust duration as needed
+    smoothScroll('#about', 1000);
 });
 </script>
 </body>
