--- a/skills.html
+++ b/skills.html
@@ -16,6 +16,13 @@
             <li><a href="contact.html">Contact Me</a></li>
         </ul>
     </nav>
+	<div class="content">
+			<h4>Hello, my name is</h4>
+			<h1>Nasib <span>Deula</span></h1>
+			<h3>I'm a QA Officer.</h3>
+			<div class="newslatter">
+			</div>
+		</div>
 
     <section class="skills">
         <div class="main">
