--- a/skills.html
+++ b/skills.html
@@ -6,23 +6,26 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/brands.min.css" integrity="sha512-OivR4OdSsE1onDm/i3J3Hpsm5GmOVvr9r49K3jJ0dnsxVzZgaOJ5MfxEAxCyGrzWozL9uJGKz6un3A7L+redIQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
-    <nav>
-        <h2 class="logo">Portfo<span>lio</span></h2>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="index.html#about">About Me</a></li>
-            <li><a href="skills.html">Skills</a></li>
-            <li><a href="#">Services</a></li>
-            <li><a href="contact.html">Contact Me</a></li>
-        </ul>
-    </nav>
-	<div class="content">
+    <div class="hero">
+		<nav>
+			<h2 class="logo">Portfo<span>lio</span></h2>
+			<ul>
+				<li><a href="index.html">Home</a></li>
+				<li><a href="#about">About Me</a></li>
+				<li><a href="#">Services</a></li>
+				<li><a href="#">skills.html</a></li>
+				<li><a href="contact.html">Contact Me</a></li>
+			</ul>
+		</nav>
+
+		<div class="content">
 			<h4>Hello, my name is</h4>
 			<h1>Nasib <span>Deula</span></h1>
 			<h3>I'm a QA Officer.</h3>
 			<div class="newslatter">
 			</div>
 		</div>
+	</div>
 
     <section class="skills">
         <div class="main">
