--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 				<li><a href="index.html">Home</a></li>
 				<li><a href="#about">About Me</a></li>
 				<li><a href="#">Services</a></li>
-				<li><a href="#">Skills</a></li>
+				<li><a href="skills.html">Skills</a></li>
 				<li><a href="contact.html">Contact Me</a></li>
 			</ul>
 		</nav>
