--- a/skills.html
+++ b/skills.html
@@ -11,9 +11,9 @@
 			<h2 class="logo">Portfo<span>lio</span></h2>
 			<ul>
 				<li><a href="index.html">Home</a></li>
-				<li><a href="#about">About Me</a></li>
+				<li><a href="index.html#about">About Me</a></li>
 				<li><a href="#">Services</a></li>
-				<li><a href="#">skills.html</a></li>
+				<li><a href="skills.com">Skills</a></li>
 				<li><a href="contact.html">Contact Me</a></li>
 			</ul>
 		</nav>
